--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -18,8 +18,13 @@
 
 <h1>Co robić we wrocławiu?</h1>
 
+<div id="map"></div>
+
 <!--  <script src="./src/index.js"></script>-->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0nGGpFEKEMhIR9XRPOPTolfUGax1GNc8&map_ids=2aa77f8c10881da9&callback=initMap"></script>
+<!--<script async-->
+<!--        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0nGGpFEKEMhIR9XRPOPTolfUGax1GNc&callback=initMap">-->
+<!--</script>-->
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0nGGpFEKEMhIR9XRPOPTolfUGax1GNc8&map_ids=2aa77f8c10881da9&callback=InitMap"></script>-->
 </body>
 </html>
