--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,9 @@
             name="description"
             content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 
     <title>Co robić we Wrocławiu?</title>
 </head>
