--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -16,14 +16,7 @@
     <title>Co robić we Wrocławiu?</title>
 </head>
 <body>
-<noscript>You need to enable JavaScript to run this app.</noscript>
+<noscript></noscript>
 <div id="root"></div>
-
-<!--  <script src="./src/index.js"></script>-->
-
-<!--<script async-->
-<!--        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0nGGpFEKEMhIR9XRPOPTolfUGax1GNc&callback=initMap">-->
-<!--</script>-->
-<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0nGGpFEKEMhIR9XRPOPTolfUGax1GNc8&map_ids=2aa77f8c10881da9&callback=InitMap"></script>-->
 </body>
 </html>
